--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,6 @@ applications:
   stack: cflinuxfs2
   buildpack: https://github.com/chregu/cf-php-varnish-buildpack
   services:
-  -  drupaldb
+  -  drupalagovdb
   env:
     VARNISH_MEMORY_LIMIT: 2G
